# defi-indexer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
analytics/: protocol_metrics.py
api/: main.py
contracts/: SimplePool.sol
indexer/: events.py  storage.py
tests/: test_metrics.py
